--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
          - name: Run Snyk to check for vulnerabilities
            uses: snyk/actions/node@master
            env:
-             SNYK_TOKEN: ${{ SNYK_TOKEN }}
+             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
