--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,24 +3,17 @@ name: CI
 on: push
 
 jobs:
-   build:
-      runs-on: ubuntu-latest
-      steps:
-         - uses: actions/checkout@v3
-         - run: make setup
-         - run: make test
-         - run: make lint
    security:
       runs-on: ubuntu-latest
       steps:
+         - uses: actions/checkout@v3
+         
+         - uses: actions/checkout@master
+         
+         - uses: snyk/actions/node@master
+           env:
+             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
          - uses: actions/setup-node@v3
            with:
                node-version: latest
                cache: 'npm'
-         - run: npm ci
-         - run: npm test
-         - uses: actions/checkout@master
-         - name: Run Snyk to check for vulnerabilities
-           uses: snyk/actions/node@master
-           env:
-             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
